# agentic-sdlc

./: .env.example  .gitignore  README.md  checkpoints.py  main.py  orchestrator.py  pipeline.yaml  pyproject.toml  requirements.txt  test_requirements.txt
agents/: __init__.py  architecture_agent.py  base_agent.py  discovery_agent.py  engineering_agent.py  infrastructure_agent.py  review_agent.py  spec_agent.py  testing_agent.py
models/: __init__.py  artifacts.py
prompts/: architecture_agent.md  discovery_agent.md  dynamic_agent.md  infrastructure_agent.md  orchestrator.md  review_agent.md  spec_agent.md  testing_agent.md
tests/: conftest.py  test_dynamic_agent_prompt.py  test_models.py  test_orchestrator_state.py  test_peer_summary.py  test_tools_registry.py  test_topo_waves.py
tools/: __init__.py  registry.py
