[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "agentic-sdlc"
version = "0.1.0"
description = "Fully dynamic LLM-orchestrated software development pipeline"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
keywords = ["llm", "agent", "sdlc", "code-generation", "orchestration"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Code Generators",
]
dependencies = [
    "openai>=1.0.0",
    "pydantic>=2.0.0",
    "rich>=13.0.0",
    "httpx>=0.27.0",
    "pyyaml>=6.0.0",
    "anyio>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
]

[project.scripts]
agentic-sdlc = "main:cli"

[tool.setuptools.packages.find]
where = ["."]
include = ["agents*", "models*", "tools*"]

# Root-level modules (main, orchestrator, checkpoints) are not inside a package;
# declare them here so `pip install -e .` makes the console script importable.
[tool.setuptools]
py-modules = ["main", "orchestrator", "checkpoints"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --tb=short"
# models/artifacts.py contains `class TestingArtifact(BaseModel)` whose name
# starts with "Test"; suppress the collection warning it triggers.
filterwarnings = [
    "ignore::pytest.PytestCollectionWarning",
]

[tool.coverage.run]
source = ["agents", "models", "tools", "orchestrator", "checkpoints"]
omit = ["tests/*", ".venv/*"]

[tool.coverage.report]
show_missing = true
skip_covered = false
